# CEN3031-Project

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  test_pantry
.circleci/: config.yml
GatorsKitchen/Backend/: database.py  food_finder.db  main.py  seed.py
backend/: database.py  main.py  seed.py
data/: locations.txt
docker/: schema.sql
frontend/: index.html
src/: Filter.cpp  Filter.h  Pantry.cpp  Pantry.h  PantryLoader.cpp  PantryLoader.h  main.cpp  pantry.cpp  pantry.h
tests/: test_filters.cpp  test_pantry_status.cpp
