[project]
name = "cen3031-project"
version = "0.1.0"
description = "A C++ and Python project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "taskipy>=1.12.0",
    "ruff>=0.3.0",
]

[tool.taskipy.tasks]
format = "ruff format ." # Applies formatting, used for local fixes
format-check = "ruff format --check ." # Checks for formatting, used in CI
lint = "ruff check ."
