[project]
name = "cen3031-project"
version = "0.1.0"
description = "A C++ and Python project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "taskipy>=1.12.0",
    "ruff>=0.3.0",
    "pre-commit>=3.5.0",
]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
